--- a/mm2.properties
+++ b/mm2.properties
@@ -1,5 +1,5 @@
 
-#Remove prefixes from mirrored cluster topics
+#Removing prefixes from mirrored cluster topics
 
 replication.policy.separator=
 source.cluster.alias=
